//
//  AccessibilityIdentifierHelper.swift
//  UsersList
//
//  Created by piotr koscielny on 28/5/25.
//

import Foundation

enum AccessibilityIdentifiers {
    enum UserAddView {
        static let addUserView = "addUserView"
        static let addUserButton = "addUserButton"
        static let userNameTextField = "userNameTextField"
        static let userJobTextField = "userJobTextField"
    }
    
    enum UserDetailView {
        static let userDetailView = "userDetailView"
        static let userNameTextField = "userNameTextField"
        static let userJobTextField = "userJobTextField"
        static let updateUserButton = "updateUserButton"
    }
    
    enum UsersListView {
        static let addNavigationBarButton = "addNavigationBarButton"
    }
}


