...
                }
                Section("User Job") {
                    TextField("Job", text: $viewModel.job)
                        .accessibilityIdentifier(AccessibilityIdentifiers.UserAddView.userJobTextField)
                }
                
                Button("Add") {
                    Task {
                        do {
                            try await viewModel.creatUser()
                            dismiss()
                        } catch {
                            showAlert = true
...
